--- a/config/database.yml
+++ b/config/database.yml
@@ -51,5 +51,5 @@ test:
 production:
   <<: *default
   database: app_production
-  username: app
-  password: <%= ENV["APP_DATABASE_PASSWORD"] %>
+  username: root
+  password: <%= ENV["MYSQL_ROOT_PASSWORD"] %>
