Add host info in /config/database.yml to fix an error in EC2.

--- a/config/database.yml
+++ b/config/database.yml
@@ -50,6 +50,7 @@ test:
 #
 production:
   <<: *default
+  host: localhost
   database: app_production
   username: root
   password: <%= ENV["MYSQL_ROOT_PASSWORD"] %>
